--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,57 @@
+.flex-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 30px;
+}
 
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+    border: 50px solid red;
+    border-radius: 7%;
+    padding: 10px 0;
+}
+
+h1 {
+    font-size: xx-large;
+    position: relative;
+    top: 45px;
+    border: 4px solid silver;
+    border-radius: 20px;
+    padding: 0 10px;
+}
+
+.board {
+    width: 800px;
+    height: 600px;
+    display: grid;
+    border: 2px solid black;
+}
+
+.buttons {
+    position: relative;
+    bottom: -40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 20px 0;
+    background-color: red;
+    width: 100%;
+    height: 100%;
+}
+
+.game-button {
+    display: block;
+    height: 80px;
+    width: 80px;
+    border-radius: 50%;
+    border: 4px solid gray;
+  }
+
+  .change-size {
+      
+  }
